# ncnn-android-piper

./: README.md  export_ncnn.py  settings.gradle
.github/workflows/: release-apk.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: en_dec.ncnn.param  en_dp.ncnn.param  en_emb_g.ncnn.param  en_enc_p.ncnn.param  en_flow.ncnn.param  zh_dec.ncnn.param  zh_dp.ncnn.param  zh_flow.ncnn.param
app/src/main/java/com/tencent/piperncnn/: MainActivity.java  PiperNcnn.java
app/src/main/jni/: CMakeLists.txt  audioplayer.cpp  audioplayer.h  piper.cpp  piper.h  piperncnn.cpp  simpleg2p.cpp  simpleg2p.h
app/src/main/res/layout/: main.xml
app/src/main/res/values/: strings.xml
